Remove redundant references terms in a term

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-/Nineteenth-Century Knowledge Project/eb07_TXT_v2/
+/Encyclopaedia Britannica/Nineteenth-Century Knowledge Project/eb07_TXT_v2/
+/Encyclopaedia Britannica/NLS/nls-data-encyclopaediaBritannica/
 /.idea/
