improve extraction from ash dataset, add metadata extraction from NLS dataframe, add chapbook extraction

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-/Encyclopaedia Britannica/Nineteenth-Century Knowledge Project/eb07_TXT_v2/
-/Encyclopaedia Britannica/NLS/nls-data-encyclopaediaBritannica/
+/EncyclopaediaBritannica/Nineteenth-Century Knowledge Project/eb07_TXT_v2/
+/EncyclopaediaBritannica/NLS/nls-data-encyclopaediaBritannica/
 /.idea/
+/ChapbooksOfScotland/NLS/defoe/
+/EncyclopaediaBritannica/NLS/defoe/
